# cjd-flows

./: .gitignore  CITATION.bib  CITATION.cff  LICENCE.md  README.md  dockerfile  pyproject.toml
.github/workflows/: testing.yml
docs/: conf.py  index.rst
experiments/cfair/: config.yaml
experiments/cifar/: cifar.yaml  cifar_complementary.yaml  cifar_complementary_cpu.yaml  cifar_jet.yaml
experiments/fashion/: config.yaml  fashion.yaml  fashion_complementary.yaml  fashion_complementary_cpu.yaml  fashionclasses_macow.yaml  fashionclasses_macow_complementary.yaml  fashionclasses_macow_complementary_cpu.yaml  fashionclasses_veriflow.yaml  fashionclasses_veriflow_complementary.yaml  fashionclasses_veriflow_complementary_cpu.yaml
experiments/mnist/: config_best.yaml  config_lu.yaml  mnist.yaml  mnist_0_minimal.yaml  mnist_complementary.yaml  mnist_complementary_cpu.yaml  mnist_digits.yaml  mnist_digits_complementary.yaml  mnist_digits_complementary_cpu.yaml  mnist_digits_macow_complementary.yaml  mnist_digits_minimal.yaml  mnist_digits_minimal_radial_chi.yaml  mnist_digits_minimal_radial_chi2.yaml  mnist_digits_minimal_radial_exponential.yaml  mnist_digits_minimal_radial_logN.yaml  mnist_digits_minimal_radial_weilbul.yaml  mnist_digits_minimal_radialdists.yaml  mnist_usflow.yaml  mnist_usflow_cpu.yaml  mnist_usflow_cpu_gammamm.yaml  mnist_usflow_gpu.yaml  mnist_usflow_hyperopt.yaml  mnist_usflow_minimal.yaml  mnist_usflow_radial_mm_gpu.yaml
experiments/synthetic/: gaussian_mixture.yaml  gaussian_mixture_standart_base.yaml  synthetic.yaml  synthetic_rad_logN.yaml
scripts/: eval.py  run-experiment.py
src/cjd_flows/: distributions.py  flows.py  networks.py  transforms.py
src/cjd_flows/explib/: eval.py  hyperopt.py  visualization.py
src/usflows/: flows.py  networks.py
tests/cjd_flows/: flows_test.py  linalg_test.py  networks_test.py  transforms_test.py
tests/explib/: hyperopt_test.py  mnist.yaml
tests/veriflow/: networks_test.py  transforms_test.py
