[tool.poetry]
name = "veriflow"
version = "0.1.0"
description = ""
authors = ["Faried Abu Zaid <fariedaz@gmail.com>"]
readme = "README.md"
packages = [{include = "src/usflows"}, {include = "scripts"}]

#
#[tool.setuptools.packages.find]
#where = ["src"] 
#

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyro-ppl = "^1.8.5"
scikit-learn = "^1.4.0"
ray = ">=2.47.1,<3.0"
pandas = ">=2.2.3,<3.0"
pyarrow = ">=18.0.0,<20.0.0"
msgpack = ">=1.1.0,<2.0.0"
cffi = ">=1.17.0,<2.0.0"
pillow = ">=11.0.0,<12.0.0"
grpcio = ">=1.68.0,<2.0.0"
click = "^8.1.6"
tensorboardx = "^2.6.1"
idx2numpy = "^1.2.3"
numpy = ">=2.1.0,<3.0"
torch = ">=2.7.0,<2.8.0"
torchaudio = ">=2.7.0,<2.8.0"
fsspec = "^2023.6.0"
rise = "^5.7.1"
onnx = ">=1.19.0,<2.0"
matplotlib = "^3.8.0"
sphinxcontrib-napoleon = "^0.7"
jupyter-server = "^2.10.1"
pyzmq = ">=26.2.0"
plotly = "^5.18.0"
kaleido = "0.2.1"
bayesian-optimization = "^1.4.3"
tensorboard = "^2.15.1"
torchvision = ">=0.22.0,<0.23.0"
traitlets = "5.9.0"
sympy = "^1.12"
seaborn = "^0.13.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
jupyter-contrib-nbextensions = "^0.7.0"
lxml = ">=5.3.0,<6.0"
jupyter = "^1.0.0"
notebook = "6.4.8"
spellchecker = "^0.4"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
