[project]
name = "cjd-flows"
version = "0.9.0"
description = "Stable uniformly scaling normalizing flows with constant Jacobian determinant and radial base distributions."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "BSD-3-Clause"
authors = [
    {name = "Faried Abu Zaid", email = "fariedaz@gmail.com"},
]
keywords = ["normalizing-flows", "density-estimation", "verification", "pytorch", "onnx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyro-ppl>=1.8.5,<2.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "ray>=2.47.1,<3.0",
    "pandas>=2.2.3,<3.0",
    "pyarrow>=18.0.0,<20.0.0",
    "msgpack>=1.1.0,<2.0.0",
    "cffi>=1.17.0,<2.0.0",
    "pillow>=11.0.0,<12.0.0",
    "grpcio>=1.68.0,<2.0.0",
    "click>=8.1.6,<9.0.0",
    "tensorboardx>=2.6.1,<3.0.0",
    "idx2numpy>=1.2.3,<2.0.0",
    "numpy>=2.1.0,<3.0",
    "torch>=2.7.0,<2.8.0",
    "torchaudio>=2.7.0,<2.8.0",
    "fsspec>=2023.6.0,<2024.0.0",
    "rise>=5.7.1,<6.0.0",
    "onnx>=1.19.0,<2.0",
    "matplotlib>=3.8.0,<4.0.0",
    "sphinxcontrib-napoleon>=0.7,<0.8",
    "jupyter-server>=2.10.1,<3.0.0",
    "pyzmq>=26.2.0",
    "plotly>=5.18.0,<6.0.0",
    "kaleido==0.2.1",
    "bayesian-optimization>=1.4.3,<2.0.0",
    "tensorboard>=2.15.1,<3.0.0",
    "torchvision>=0.22.0,<0.23.0",
    "traitlets==5.9.0",
    "sympy>=1.12,<2.0.0",
    "seaborn>=0.13.2,<0.14.0",
]

[project.urls]
Repository = "https://github.com/USFlows/cjd-flows"
Documentation = "https://github.com/USFlows/cjd-flows/tree/main/docs"

[tool.poetry]
packages = [{include = "src/cjd_flows"}, {include = "scripts"}]

#
#[tool.setuptools.packages.find]
#where = ["src"] 
#


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
jupyter-contrib-nbextensions = "^0.7.0"
lxml = ">=5.3.0,<6.0"
jupyter = "^1.0.0"
notebook = "6.4.8"
spellchecker = "^0.4"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
